refactor: update task creation rules and enhance README with inline text actions

--- a/index.html
+++ b/index.html
@@ -372,7 +372,8 @@ Rules:
 - Focus on productivity, clarity, and getting things done.
 - When the user asks about their tasks, projects, or tags, USE the tools to fetch real data.
 - When asked to create or update items, USE the corresponding tools.
-- Always confirm actions with a brief summary of what was done.`;
+- Always confirm actions with a brief summary of what was done.
+- When creating tasks, generate a short descriptive title. NEVER put the user's raw input as the title. Place any details, context, or the user's original text in the notes/description field instead.`;
 
       // ── Settings Elements ──
       const settingsView = document.getElementById('settingsView');
@@ -533,12 +534,12 @@ Rules:
           type: 'function',
           function: {
             name: 'addTask',
-            description: 'Create a new task',
+            description: 'Create a new task. The title must be a short summary (never the raw user input). Put all details and user input text in notes.',
             parameters: {
               type: 'object',
               properties: {
-                title: { type: 'string', description: 'Task title' },
-                notes: { type: 'string', description: 'Task notes/description (optional)' }
+                title: { type: 'string', description: 'Short descriptive title for the task (do NOT paste user input here)' },
+                notes: { type: 'string', description: 'Task description with details, context, and user input text' }
               },
               required: ['title']
             }
